_sass/guides.scss
// hero container stuff - first section element
.hero-container{
  grid-row: 1;
  display: grid;
  grid-column-gap: 10px;
  grid-column: 1/span 12;
  grid-template-columns: repeat(3, 1fr);

}

.hero-container--guides{
background-color: #003750;
box-shadow: -20rem 0 #003750, 40rem 0 #003750;
margin-bottom: 4rem;
//comment

}

.hero-container--guides .col1{
grid-column: 1/8;
max-width: 827px;
max-height: 168px;
margin: 4rem 0 4rem 0;    
}

.hero-container--guides .col3{
grid-column: 10/12
}
// end hero container - first section element

// parental div stuff 
.guide{
  // display: grid;
  padding: 0 120px 0 120px;
  grid-template-columns: repeat(12, 1fr);
  grid-auto-rows: minmax(100px, auto);
  grid-column-gap: 3.975rem;
}

// end parental div

// second section element
.content-container-title{
  margin: 0;
}

.content-container--guide  h1 {
  font-size: 40px;
  font-style: normal;
  font-weight: 600;
  line-height: 60px;
  letter-spacing: 0em;
  text-align: left;
  color: #383843;
}

.content-container--guide  h2{
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: 0em;
  text-align: left;
  color: #383843;
  margin-top: 1.5rem;
}

.content-container--guide h3{
  font-size: 18px;
  font-style: normal;
  font-weight: 600;
  line-height: 22px;
  letter-spacing: 0em;
  text-align: left;
  color: #383843;
}

.content-container--guide h4{
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 22px;
  letter-spacing: 0em;
  text-align: left;
  color: #383843;
}

.content-container--guide p {
  font-family: $poppins;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0em;
  text-align: left;

}
// end second section element 

// left side container
#creating-a-good-project-image {
  margin: 1rem 0 1rem 0;
}


.title5 {
  color: $primary;
  margin: 0;
}

.body-container{
  grid-column-gap: 25rem;
  grid-column: 1/span 12;
  font-family: 'Open Sans', sans-serif;
  padding-bottom: 5rem;
  display: flex;
}

.body-container ul{
  list-style-type: disc;
  padding-left: 30px;
}

.body-container li{
  margin-bottom: .5rem;
}

.body-container a{
  text-decoration: none;
  color: $secondary;
}

.content-container{
  grid-column: 1/8;
} 
// end left side container

// right nav container
.sticky-nav-container--guides{
  grid-column: 9/70;
  margin-left: 63px;
  }

.sticky-nav-container--guides nav{
  width: 310px;
  height: 320px;
  }
  
.sticky-nav-container--guides h2{
  font-family: $poppins;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: 0em;
  text-align: left;
  color: #003750;
  padding: 32px 24px 12px;
  margin: 0;
} 

.sticky-nav-container--guides ul{
  list-style-type: none;
  padding-left: 24px;
  margin-top: 0;
}

.sticky-nav-container--guides a{
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  color:black;
}

.sticky-nav-container--guides li{
  padding-bottom: 8px;
  margin-top: 8px;
}

.sticky-nav-container--guides a{
  font-weight: normal;
}

.nav-border-links{
  border-left: 2px solid;
  border-color: $iconsgrey;
  margin-left: 12px;
  margin-bottom: 16px;
}

.nav-border{
  background-color: #F4F6F9;
  padding-bottom: 16px;
}
// end right nav container

// bottom shadow

.body-shadow{
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.6);
  overflow-y: hidden;
  margin-bottom: 3rem;
  border-radius: 0 0 100px 100px;
}

